# gmat-run

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: index.html
docs/: cli.md  getting-started.md  index.md  install-gmat.md  known-limitations.md  reference.md
docs/examples/: 01_load_run_plot.ipynb  02_parameter_sweep.ipynb  03_ground_track.ipynb  ground_track_leo.script  index.md  leo_keplerian.script
docs/reference/: errors.md  index.md  install.md  mission.md  parsers.md  results.md  runtime.md
examples/: index.html
examples/01_load_run_plot/: index.html
examples/02_parameter_sweep/: index.html
examples/03_ground_track/: index.html
getting-started/: index.html
install-gmat/: index.html
known-limitations/: index.html
reference/: index.html
reference/errors/: index.html
reference/install/: index.html
reference/mission/: index.html
reference/parsers/: index.html
reference/results/: index.html
reference/runtime/: index.html
search/: search_index.json
src/gmat_run/: __init__.py  cli.py  errors.py  install.py  mission.py  results.py  runtime.py
src/gmat_run/parsers/: __init__.py  aem_ephemeris.py  contact.py  ephemeris.py  epoch.py  reportfile.py  spk.py  stk_ephemeris.py
tests/: test_cli.py  test_errors.py  test_install.py  test_mission.py  test_mission_integration.py  test_parsers_aem_ephemeris.py  test_parsers_aem_ephemeris_goldens.py  test_parsers_contact.py  test_parsers_contact_goldens.py  test_parsers_ephemeris.py  test_parsers_ephemeris_goldens.py  test_parsers_epoch.py  test_parsers_reportfile.py  test_parsers_reportfile_goldens.py  test_parsers_spk.py  test_parsers_spk_goldens.py  test_parsers_stk_ephemeris.py  test_parsers_stk_ephemeris_goldens.py  test_results.py  test_runtime.py  test_smoke.py
tests/fixtures/contact/: Ex_ContactLocatorAllFormats__AzElRange.txt  Ex_ContactLocatorAllFormats__AzElRangeRR.txt  Ex_ContactLocatorAllFormats__ContactRange.txt  Ex_ContactLocatorAllFormats__Legacy.txt  Ex_ContactLocatorAllFormats__MaxElev.txt  Ex_ContactLocatorAllFormats__MaxElevRange.txt
tests/fixtures/ephemeris/: Ex_LEOEphemeris.oem  Ex_SPK.bsp  Ex_STKEphemeris.e  _make_spk.py
tests/fixtures/reportfile/: Ex_AnalyticMassProperties.txt  Ex_FiniteBurnParameters.txt  Ex_TLE_Propagation.txt  README.md
tests/integration/: conftest.py  test_attitude_inputs.py  test_cli.py  test_round_trip.py  test_smoke.py
tests/integration/fixtures/: Ex_AEMAttitude.script  (+3 more)
(+12 files in other folders)
